; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/regedit/extr_framewnd.c_UpdateStatusBar.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/regedit/extr_framewnd.c_UpdateStatusBar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@g_pChildWnd = common dso_local global %struct.TYPE_2__* null, align 8
@hStatusBar = common dso_local global i32 0, align 4
@SB_SETTEXTW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UpdateStatusBar() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_pChildWnd, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i64 @GetItemPath(i32 %5, i32 0, i32* %1)
  store i64 %6, i64* %2, align 8
  %7 = load i32, i32* @hStatusBar, align 4
  %8 = load i32, i32* @SB_SETTEXTW, align 4
  %9 = load i64, i64* %2, align 8
  %10 = trunc i64 %9 to i32
  %11 = call i32 @SendMessageW(i32 %7, i32 %8, i32 0, i32 %10)
  ret void
}

declare dso_local i64 @GetItemPath(i32, i32, i32*) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
